# MitoRAG

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-update.yml  ci-backend.yml  ci-frontend.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/mitorag_api/: __init__.py  main.py
apps/api/src/mitorag_api/routers/: health.py  ingest.py  kg.py  query.py
apps/api/tests/: test_api.py
apps/cli/: pyproject.toml
apps/cli/src/mitorag_cli/: __init__.py  main.py
apps/cli/tests/: test_cli.py
data/seeds/: recent_papers.json
docs/: AGENTS.md  ARCHITECTURE.md  KG_SCHEMA.md  RESEARCH_REPORT.md  RETRIEVAL.md
scripts/: agents_smoke.py  auto_kg_smoke.py  fetch_mito_papers.sh  kg_smoke.py  ollama_smoke.py  refresh_paper_manifest.py  retrieval_smoke.py  web_search_smoke.py
