[project]
name = "mitorag"
version = "1.0.0"
description = "Local mitochondrial RAG monorepo with ingestion, retrieval, KG, agents, API, and UI packages."
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [
  "packages/ingestion/src",
  "packages/retrieval/src",
  "packages/knowledge_graph/src",
  "packages/agents/src",
  "packages/internet/src",
  "apps/api/src",
  "apps/cli/src",
]
testpaths = [
  "packages/ingestion/tests",
  "packages/retrieval/tests",
  "packages/knowledge_graph/tests",
  "packages/agents/tests",
  "packages/internet/tests",
  "apps/api/tests",
  "apps/cli/tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = [
  "packages/ingestion/src",
  "packages/retrieval/src",
  "packages/knowledge_graph/src",
  "packages/agents/src",
  "packages/internet/src",
  "apps/api/src",
  "apps/cli/src",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]
ignore = [
  "B009",
  "UP006",
  "UP007",
  "UP035",
  "UP045",
]

[tool.pyright]
include = [
  "packages/ingestion/src",
  "packages/retrieval/src",
  "packages/knowledge_graph/src",
  "packages/agents/src",
  "packages/internet/src",
  "apps/api/src",
  "apps/cli/src",
]
exclude = ["**/__pycache__", "data"]
extraPaths = [
  "packages/ingestion/src",
  "packages/retrieval/src",
  "packages/knowledge_graph/src",
  "packages/agents/src",
  "packages/internet/src",
  "apps/api/src",
  "apps/cli/src",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
